util/diff_html.py: Fixed whitespace in generated diff view table so white-space: pre can be used (and whitespace in diffs preserved).

--- a/MoinMoin/web/static/htdocs/modern/css/screen.css
+++ b/MoinMoin/web/static/htdocs/modern/css/screen.css
@@ -459,14 +459,20 @@ input.button {
 
 .diff-added {
     background-color: #E0FFE0;
-    vertical-align: sub;
+    vertical-align: top;
     width: 50%;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    font-family: courier, monospace;
 }
 
 .diff-removed {
     background-color: #FFFFE0;
-    vertical-align: sub;
+    vertical-align: top;
     width: 50%;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    font-family: courier, monospace;
 }
 
 .diff-added span {
